--- a/examples/android/src/main/AndroidManifest.xml
+++ b/examples/android/src/main/AndroidManifest.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="io.grpc.examples.helloworld">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="io.grpc.examples.helloworld">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_PHONE_NUMBERS"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <application
-            android:allowBackup="true"
-            android:fullBackupContent="true"
-            android:icon="@android:drawable/btn_star"
-            android:label="@string/app_label">
+        android:allowBackup="true"
+        android:fullBackupContent="true"
+        android:icon="@android:drawable/btn_star"
+        android:label="@string/app_label">
         <activity
-                android:theme="@style/Theme.AppCompat.NoActionBar"
-                android:name="io.grpc.examples.helloworld.MainActivity"
-                android:exported="true">
+            android:name=".MainActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
